# printdesk

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .secrets.env.example  LICENSE.md  README.md  go.work  go.work.sum  infra.Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi  tsconfig.json  vite.config.ts
infra/: api-gateway.ts  api.ts  assets.ts  auth.ts  buckets.ts  cdn.ts  config.ts  db.ts  dev.ts  dns.ts  iam.ts  infra.ts  misc.ts  papercut.ts  parameters.ts  queues.ts  realtime.ts  reverse-proxy.ts  roles.ts  router.ts  storage.ts  tenant.ts  utils.ts  vpc.ts  web.ts  www.ts
infra/custom/components/: ciphertext.ts  index.ts  physical-name.ts  value.ts
infra/custom/components/aws/: index.ts  vpc.ts
infra/custom/components/cloudflare/: kv.ts
infra/lib/: ciphertext.ts  index.ts  physical-name.ts
infra/lib/aws/: index.ts
infra/lib/aws/appsync/: event-api.ts  index.ts
infra/lib/aws/dsql/: cluster.ts
infra/lib/aws/iam/: access-key.ts  external-role.ts  index.ts
infra/lib/aws/lambda/: function.ts  (+1 more)
infra/lib/cloudflare/: index.ts  static-site.ts  tanstack-start.ts
infra/lib/components/: ciphertext.ts  index.ts
infra/lib/templates/: cloudfront-request-function.js  utils.ts
infra/lib/time/: index.ts  rotating.ts
migrations/: 0000_brief_alex_wilder.sql  0000_third_expediter.sql  0001_silent_glorian.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
patches/: @effect-aws__dynamodb@2.0.0-beta.4.patch  @react-aria__utils.patch
(+50 files in other folders)
